# portfolio

./: .gitignore  README.md  pyproject.toml  roadmap.md
.cursor/rules/: jira-workflow.mdc
.cursor/skills/: avoid-ai-writing.md  frontend-design.md
backend/: README.md  app.py  db.py  pyproject.toml
backend/config/: app.toml  app.yaml
backend/db/sql_scripts/messages/: insert_message.sql  list_messages.sql
backend/db/sql_scripts/schema/: 001_create_messages.sql
backend/portfolio_api/: __init__.py  app.py  config.py
backend/portfolio_api/api/: __init__.py  contact.py  health.py  messages.py
backend/portfolio_api/db/: connection.py  schema.py  sql.py
backend/portfolio_api/repositories/: messages.py
backend/portfolio_api/validators/: contact.py
frontend/: .env.example  README.md
frontend/app/: globals.css  layout.js  page.js
frontend/app/about/: page.js
frontend/app/contact/: page.js
frontend/app/work/: page.js
frontend/app/work/[slug]/: not-found.js  page.js
frontend/components/: ContactForm.js  CopySlot.js  Footer.js  Header.js
frontend/content/: about.js  contact.js  copy.js  home.js  projects.js  site.js
