[project]
name = "portfolio-backend"
version = "0.1.0"
description = "Flask + sqlite3 API for the portfolio contact form"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=5.0.1",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["portfolio_api"]

[tool.uv]
package = true
